-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.7.0 RC
-
-
a546f8f55 (dev), 8d9ee3bfd (6.7), aa4c030a9 (tqtc/lts-6.5)
-
Multimedia Wk 13-14, Multimedia wk 15-16
When using an analog camera and converting it to digital using ADV7280-m the camera is not detected when using the ffmpeg backend. With gstreamer the same camera is detected.
The issue seems to be that the camera doesn't support discrete frame sizes and the qt multimedia skips other types. In V4L2 it's V4L2_FRMSIZE_TYPE_DISCRETE in the structure v4l2_frmsizeenum.
For Gerrit Dashboard: QTBUG-123526 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
552690,5 | FFmpeg V4L2 cameras: Add stepwise and continuous frame size/rate support | dev | qt/qtmultimedia | Status: MERGED | +2 | 0 |
553022,2 | FFmpeg V4L2 cameras: Add stepwise and continuous frame size/rate support | 6.7 | qt/qtmultimedia | Status: MERGED | +2 | 0 |
557427,2 | FFmpeg V4L2 cameras: Add stepwise and continuous frame size/rate support | tqtc/lts-6.5 | qt/tqtc-qtmultimedia | Status: MERGED | +2 | 0 |