FFmpeg V4L2 cameras: Add stepwise and continuous frame size/rate support

Previously V4L2 camera devices (linux) that didn't support discrete
frame sizes and frame rates would not be added to the list of available
cameras. This change adds support for both stepwise and continuous
frame sizes/rates by adding the minimum and maximum supported
frame size/rate to the camera's list of videoFormats/photoResolutions.

Modifications:
- The case where frameSize.type != V4L2_FRMSIZE_TYPE_DISCRETE is
handled by reading out max/min values.
- frameSizes are stored in a temporary list to allow us to handle both
max and min QSize objects within the same iteration of the existing
while loop.
- The conversion from frame interval to frame rate and updating of
min/max frame rate variables is moved inside a lambda to prettify code.

Support for frame sizes in between the max/min can be implemented in
the future if necessary. This requires a selection process to avoid a
long list of frame sizes for V4L2 cameras where the frame size steps is
set to 1.

Fixes: QTBUG-123526
Pick-to: 6.6 6.5
Change-Id: Idfdbc587c8f75f22cf068f1c726abf7a4be86259
Reviewed-by: Artem Dyomin <artem.dyomin@qt.io>
(cherry picked from commit a546f8f55e314f2221ba03d67662df1a3e21ec09)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>